Read every reference table once per compute
A repository lookup is a full criteria select followed by a linear filter in
Java, and a model carrying foreign ids materialises the tables it points at
before any predicate runs. The unconditional Reforge findFirst in ObjectData's
constructor was the worst of them: it runs once per armour piece and once per
detected accessory, and Reforge carries @ForeignIds twice, so each one
materialised the whole item table and the item categories before comparing a
single id.

ReferenceSnapshot reads twenty tables once and indexes each by the id it is
looked up under. The forty-seven lookups on the compute path become those
twenty reads. Class shapes, enums, buckets and public signatures are all
unchanged, and the golden file does not move.

AccessoryBag gets additive overloads rather than changed accessors:
getDetectedAccessories and getAccessories each take a snapshot, and the no-arg
forms keep every existing caller compiling. The no-arg form checks its memo
first, and a bag with nothing to parse still resolves nothing, so a bag decoded
on its own reads empty instead of opening a session - both paths stay asserted.

Three lookups stay behind in AccessoryBag's power accessors, which run once per
compute rather than once per item. Four more cannot be removed from here at
all: Stat.Substitute.getStat, Reforge.Substitute.getStat, Pet.Substitute.getStat
and the two Level.getEffects scrapes all call getRepository from inside
skyblock's own model classes.